# AutoGenesis

./: .gitignore  CONTRIBUTING.md  LICENSE  MAC-README.md  MOBILE-README.md  NOTICE  PLAN.md  PRIVACY.md  README.md  requirements.txt
.github/acl/: access.yml
.github/compliance/: inventory.yml
.github/workflows/: deploy-docs.yml
appium-mcp-server/: driver_session.py  pyproject.toml  requirements.txt  simple_client.py  simple_server.py
appium-mcp-server/conf/: appium_conf.json
appium-mcp-server/docs/: macOS_Appium_Setup_Guide.md  start_appium.sh  start_appium_on_mac.sh
appium-mcp-server/llm/: chat.py
appium-mcp-server/llm - Copy/: prompt.py
appium-mcp-server/tools/: android_driver_tool.py  appium_driver_tool.py  config_tool.py  gen_code_tool.py  ios_driver_tool.py  mac_driver_tool.py  verify_tools.py
appium-mcp-server/utils/: config_manager.py  element_util.py  gen_code.py  logger.py  response_format.py
bdd_ai_toolkit/: CONTRIBUTING.md  README.md  package.json
bdd_ai_toolkit/resources/: automation-details.html  main.ts  webview.html
bdd_ai_toolkit/scripts/: compile.js
bdd_ai_toolkit/src/: extension.ts  globalState.ts
behave-demo/: pyproject.toml
behave-demo/features/: demo.feature  environment.py
behave-demo/features/steps/: demo.py
cli/: __init__.py  main.py
conf/: autogenesis_conf.json
core/agent/: __init__.py  agent_coordinator.py  context_manager.py  skill_loader.py
core/analysis/: __init__.py  failure_classifier.py  result_analyzer.py  script_healer.py
core/bdd/: __init__.py
core/llm/: __init__.py  chat.py
core/utils/: __init__.py  logger.py  response_format.py
docs/: Dockerfile  README.md  SETUP.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/src/: App.tsx
examples/desktop_mac/: README.md
examples/desktop_windows/: README.md
examples/mobile/: README.md
pywinauto-mcp-server/: WINDOWS-README.md  app_session.py  pyproject.toml  requirements.txt  simple_server.py
servers/: __init__.py  unified_mcp_server.py
skills/: __init__.py  base_skill.py
(+107 files in other folders)
